--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h1>Welcome to My Hosting Page</h1>
     <p>Click the button below to reveal an image!</p>
     <button id="revealButton">Click Me</button>
-    <img id="hiddenImage" src="img/yenul.jpg" alt="Yenul">
+    <img id="hiddenImage" src="yenul.jpg" alt="Yenul">
 
     <script>
         const button = document.getElementById('revealButton');
