--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: transform 0.2s ease, background-color 0.3s ease;
+            display: inline-block;
         }
 
         button:hover {
@@ -60,7 +61,7 @@
     <h1>Welcome to My Hosting Page</h1>
     <p>Click the button below to reveal an image!</p>
     <button id="revealButton">Click Me</button>
-    <img id="hiddenImage" src="yenul.jpg" alt="Yenul">
+    <img id="hiddenImage" src="yenul.jpg" alt="A beautiful scene">
 
     <script>
         const button = document.getElementById('revealButton');
